<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dongle.location.Activity.AddEditActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey">

        <ImageView
            android:id="@+id/imgAdd_Edit_Place"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/bg_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/EditAdd_Edit_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_fill_in_place_name"
            android:inputType="text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditAdd_Img_Browse" />

        <TextView
            android:id="@+id/txtAdd_Edit_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/text_open"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditAdd_Edit_Name" />

        <EditText
            android:id="@+id/EditAdd_Edit_Time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:hint="@string/hint_fill_in_place_time"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/txtAdd_Edit_Time"
            app:layout_constraintTop_toBottomOf="@+id/EditAdd_Edit_Name" />

        <EditText
            android:id="@+id/EditAdd_Edit_Address"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:hint="@string/hint_fill_in_place_address"
            android:layout_marginTop="24dp"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/EditAdd_Edit_Time" />

        <EditText
            android:id="@+id/EditAdd_Edit_Price"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_fill_in_place_price"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/EditAdd_Edit_Address" />

        <EditText
            android:id="@+id/EditAdd_Edit_Description"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_fill_in_place_description"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/EditAdd_Edit_Price" />

        <Button
            android:id="@+id/btnAdd_Edit_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditAdd_Edit_Description" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAdd_Edit_Time"
            app:srcCompat="@drawable/place_detail" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/price_detail" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/description_detail" />

        <Button
            android:id="@+id/EditAdd_Img_Browse"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_browse_image"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAdd_Edit_Place" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
