<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="com.example.dongle.location.Activity.CategoriesActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutCategories_coffee"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_coffee"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imgCategories_coffee"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/cafe_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCategories_coffee"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:text="Coffee"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCategories_coffee"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/viewCategories_coffee"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_categories_coffee"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgCategories_coffee"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutCategories_restaurant"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_restaurant"
        android:layout_weight="2">

        <TextView
            android:id="@+id/txtCategories_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="Restaurant"
            android:textColor="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCategories_restaurant"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imgCategories_restaurant"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/restaurant_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/viewCategories_restaurant"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_categories_restaurant"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgCategories_restaurant"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutCategories_cinema"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_coffee"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imgCategories_cinema"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/cinema_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCategories_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:text="Cinema"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCategories_cinema"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/viewCategories_cinema"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_categories_cinema"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgCategories_cinema"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutCategories_atm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/background_restaurant">

        <TextView
            android:id="@+id/txtCategories_atm"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:text="ATM"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCategories_atm" />

        <ImageView
            android:id="@+id/imgCategories_atm"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/atm_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/viewCategories_atm"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_categories_atm"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgCategories_atm"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
